Email from Request Form and content on Get-Involved
Email from Request Form and content on Get-Involved

--- a/ClotheOurKids.Web/Views/Donation/GetInvolved.cshtml
+++ b/ClotheOurKids.Web/Views/Donation/GetInvolved.cshtml
@@ -19,9 +19,6 @@
                     <i class="fa fa-twitter"></i>
                 </a>
 
-                <!--Email-->
-                <a type="button" class="btn-floating btn-small btn-email"><i class="fa fa-envelope"></i></a>
-
             </div>
         </div>
     </section>  
@@ -29,133 +26,288 @@
     <hr class="between-sections">
 
     <!--Section: How You Can Help-->
-    <section class="section text-center wow fadeIn" data-wow-delay="0.6s">
+    <section class="section extra-margins">
         
         <!--Section heading-->
-        <h1 class="section-heading">How You Can Help</h1>
+        <h1 class="section-heading wow fadeIn"  data-wow-delay="0.2s">Make A Difference</h1>
         <!--Section description-->
-        <p class="section-description">
-            Without the community's help, Clothe Our Kids of Morgan County would not exist.
+        <p class="section-description wow fadeIn"  data-wow-delay="0.4s">
+            Without the support of the community, Clothe Our Kids of North Alabama would not exist.
             <br />
-            We use all of the funds and other donations that we receive to make sure that kids get the clothes they need as quickly as possible.
+            We use all funds and other donations that we receive to make sure that kids get the clothing and hygiene products they need as quickly as possible. 
+            <br />
+            <br />
+            There are several ways you can get involved!
         </p>
 
         <!--First row-->
-        <div class="row">
+        <div class="row d-flex">
 
             <!--First column-->
-            <div class="col-md-6 mb-r">
-
-                <!--Image-->
-                <div class="view overlay hm-white-slight z-depth-2" style="max-height:400px;">
-                    <img src="~/Content/img/ClotheOurKids/COKTrailer-6.jpg" class="img-fluid" />
+            <div class="col-md-5 d-flex align-self-center mb-r wow fadeInLeft" data-wow-delay="0.2s">
+                <!--Featured image-->
+                <div class="view overlay hm-white-slight">
+                    <img src="https://mdbootstrap.com/images/regular/people/img%20(47).jpg">
                     <a>
-                        <div class="mask waves-effect waves-light"></div>
+                        <div class="mask"></div>
                     </a>
                 </div>
-                <!--/Image-->
-
-                <!--Excerpt-->
-                <div class="card-block">
-                    <h3 class="h3-responsive">Give Clothes</h3>
-                    <p>
-                        We always need more clothes!
-                        <br />
-                        100% of the clothes we give out come from donations from the community and we are always needing more. Please visit the <a href="@Url.RouteUrl("WhatWeGive")">What We Give</a> page to view the clothing items that we accept as donations.
-                    </p>
-                </div>
-                <!--/Excerpt-->
             </div>
             <!--/First column-->
 
             <!--Second column-->
-            <div class="col-md-6 mb-r">
-                <!--Image-->
-                <div class="view overlay hm-white-slight z-depth-2">
-                    <img src="~/Content/img/TennesseeCOK/HostADrive.jpg" />
-                    <a>
-                        <div class="mask waves-effect waves-light"></div>
-                    </a>
-                </div>
-                <!--/Image-->
+            <div class="col-md-7 d-flex align-self-center mb-r wow fadeInRight" data-wow-delay="0.2s">
                 <!--Excerpt-->
-                <div class="card-block">
-                    <h3 class="h3-responsive">Host A Drive</h3>
+                <div>
+                    <h4>Donate Items</h4>
                     <p>
-                        We do everything we can to reach out to the community to get the word out about Clothe Our Kids of Morgan County, but we need you to help us reach the people that you know!
-                        One of the best ways that you can help us is to sponsor a sock and/or underwear drive.
-                        We only give out new socks and underwear, so these items are always in need.  If you would like help setting this up or ideas that would work well with your group, feel free to contact us at 256-887-KIDS(5437) or <a href="mailto:info@givekidsclothes.com">info@givekidsclothes.com</a>
+                        We rely on the clothing and shoe donations from our community.
+                        We accept sizes 4t-Adult (we only ask that adult clothing be appropriate for teenagers).
+                        We also love getting new packs of socks and underwear as well as products for our hygiene Kits.
                     </p>
                 </div>
-                <!--/Excerpt-->
+                
+            </div>
+            <!--/Second column-->
+        </div>
+        <!--/First row-->
+
+        <!--Second row-->
+        <div class="row">
+
+            <!--First column-->
+            <div class="col-md-7 d-flex align-self-center mb-r wow fadeInLeft" data-wow-delay="0.3s">
+                <!--Excerpt-->
+                <div>
+                    <h4>Host A Drive</h4>
+                    <p>
+                        Want to get a group involved?
+                        Hosting a drive is a great way!
+                        You can pick a specific need to collect for (socks, undies, shoes, etc.) and get your group involved in providing for children through clothe our kids!
+                        If you would like help setting this up or ideas that would work well with your group, feel free to contact us at 256-887-KIDS(5437) or info@givekidsclothes.com
+                    </p>
+                </div>                
+            </div>
+            <!--/First column-->
+            <!--Second column-->
+            <div class="col-md-5 d-flex align-self-center mb-r wow fadeInRight" data-wow-delay="0.3s">
+                <!--Featured image-->
+                <div class="view overlay hm-white-slight">
+                    <img src="https://mdbootstrap.com/images/regular/people/img%20(48).jpg">
+                    <a>
+                        <div class="mask"></div>
+                    </a>
+                </div>
             </div>
             <!--/Second column-->
 
-            <!--Third column-->
-            <div class="col-md-6 mb-r">
-                <!--Image-->
-                <div class="view overlay hm-white-slight z-depth-2">
-                    <img src="~/Content/img/TennesseeCOK/FAQ.jpg" />
+        </div>
+        <!--/Second row-->
+
+        <!--Third row-->
+        <div class="row">
+
+            <!--First column-->
+            <div class="col-md-5 align-self-center mb-r wow fadeInLeft" data-wow-delay="0.4s">
+                <!--Featured image-->
+                <div class="view overlay hm-white-slight">
+                    <img src="https://mdbootstrap.com/images/regular/people/img%20(49).jpg">
                     <a>
-                        <div class="mask waves-effect waves-light"></div>
+                        <div class="mask"></div>
                     </a>
                 </div>
-                <!--/Image-->
-                <!--Excerpt-->
-                <div class="card-block">
-                    <h3 class="h3-responsive">Volunteer</h3>
-                    <p>
-                        We need volunteers every week. If you can
-                        <ul class="list-group">
-                            <li class="list-group-item justify-content-between">sort clothes <i class="fa fa-check green-text"></i></li>
-                            <li class="list-group-item justify-content-between">pack bags <i class="fa fa-check green-text"></i></li>
-                            <li class="list-group-item justify-content-between">deliver to schools <i class="fa fa-check green-text"></i></li>
-                        </ul>
-                        <br />
-
-                        we need your help!
-                    </p>
-                    
-
-                    <p>
-                        While we are paying that God will provide us with a team of dedicated and consistent volunteers who
-                        can help us give clothes to kids week after week, we always love to have those who are looking for a short term project or even a single day of ministering to us and to kids in need.
-                        <br />
-                        <br />
-                        Just give us a call if you are looking to get involved so that we can set up time for you to help!
-                    </p>
-                </div>
-                <!--/Excerpt-->
             </div>
-            <!--/Third column-->
-
-            <!--Fourth column-->
-            <div class="col-md-6 mb-r">
-                <!--Image-->
-                <div class="view overlay hm-white-slight z-depth-2">
-                    <img src="~/Content/img/TennesseeCOK/Donate.jpg" />
-                    <a>
-                        <div class="mask waves-effect waves-light"></div>
-                    </a>
-                </div>
-                <!--/Image-->
+            <!--/First column-->
+            <!--Second column-->
+            <div class="col-md-7 align-self-center mb-r wow fadeInRight" data-wow-delay="0.4s">
                 <!--Excerpt-->
-                <div class="card-block">
-                    <h3 class="h3-responsive">Donate</h3>
+                <div>
+                    <h4>Volunteer</h4>
                     <p>
-                        Just like every other ministry or non-profit, it takes money for us to operate. Because we have no paid employees and no rent, 100% of the money that is donated goes directly to ensuring kids get the clothes they need. Visit our <a href="@Url.RouteUrl("Donate")">Donations</a> page to learn more about
-                        how our funds are spent and to give us your support.
+                        We need volunteers every week. If you can sort clothes, pack bags, deliver to schools, or pick up donations we need your help!
                     </p>
                 </div>
-                <!--/Excerpt-->
+                
             </div>
-            <!--/Fourth column-->
+            <!--/Second column-->
 
         </div>
-        <!--/First row-->
+        <!--/Third row-->
+
+        <!--Fourth row-->
+        <div class="row">
+
+            <!--First column-->
+            <div class="col-md-7 align-self-center mb-r wow fadeInLeft" data-wow-delay="0.3s">
+                <!--Excerpt-->
+                <div>
+                    <h4>Give</h4>
+                    <p>
+                        Just like every other ministry or non-profit, it takes money for us to operate.
+                        If you would like to give you can make financial contributions by clicking <a  href="@Url.RouteUrl("Give")">here</a>,
+                        or by sending them to P.O. Box 565, Somerville, AL 35670.
+                    </p>
+                </div>
+                
+            </div>
+            <!--/First column-->
+            <!--Second column-->
+            <div class="col-md-5 align-self-center mb-r wow fadeInRight" data-wow-delay="0.3s">
+                <!--Featured image-->
+                <div class="view overlay hm-white-slight">
+                    <img src="https://mdbootstrap.com/images/regular/people/img%20(48).jpg">
+                    <a>
+                        <div class="mask"></div>
+                    </a>
+                </div>
+            </div>
+            <!--/Second column-->
+
+        </div>
+        <!--/Fourth row-->
+
+        <!--Third row-->
+        <div class="row">
+
+            <!--First column-->
+            <div class="col-md-5 align-self-center mb-r wow fadeInLeft" data-wow-delay="0.4s">
+                <!--Featured image-->
+                <div class="view overlay hm-white-slight">
+                    <img src="https://mdbootstrap.com/images/regular/people/img%20(49).jpg">
+                    <a>
+                        <div class="mask"></div>
+                    </a>
+                </div>
+            </div>
+            <!--/First column-->
+            <!--Second column-->
+            <div class="col-md-7 align-self-center mb-r wow fadeInRight" data-wow-delay="0.4s">
+                <!--Excerpt-->
+                <div>
+                    <h4>Become A Sponsor</h4>
+                    <p>
+                        If your business would like to become a sponsor of Clothe Our Kids of North Alabama please send us an e-mail at <a href="mailto:sponsor@givekidsclothes.com">sponsor@givekidsclothes.com</a> for more information.
+                    </p>
+                </div>                
+            </div>
+            <!--/Second column-->
+
+        </div>
+        <!--/Third row-->
+
+
+
     </section>
 
+
+
+
 </div>
+
+
+@*<!--First column-->
+    <div class="col-md-6 mb-r">
+
+        <!--Image-->
+        <div class="view overlay hm-white-slight z-depth-2" style="max-height:400px;">
+            <img src="~/Content/img/ClotheOurKids/COKTrailer-6.jpg" class="img-fluid" />
+            <a>
+                <div class="mask waves-effect waves-light"></div>
+            </a>
+        </div>
+        <!--/Image-->
+        <!--Excerpt-->
+        <div class="card-block">
+            <h3 class="h3-responsive">Give Clothes</h3>
+            <p>
+                We always need more clothes!
+                <br />
+                100% of the clothes we give out come from donations from the community and we are always needing more. Please visit the <a href="@Url.RouteUrl("WhatWeGive")">What We Give</a> page to view the clothing items that we accept as donations.
+            </p>
+        </div>
+        <!--/Excerpt-->
+    </div>
+    <!--/First column-->
+    <!--Second column-->
+    <div class="col-md-6 mb-r">
+        <!--Image-->
+        <div class="view overlay hm-white-slight z-depth-2">
+            <img src="~/Content/img/TennesseeCOK/HostADrive.jpg" />
+            <a>
+                <div class="mask waves-effect waves-light"></div>
+            </a>
+        </div>
+        <!--/Image-->
+        <!--Excerpt-->
+        <div class="card-block">
+            <h3 class="h3-responsive">Host A Drive</h3>
+            <p>
+                We do everything we can to reach out to the community to get the word out about Clothe Our Kids of Morgan County, but we need you to help us reach the people that you know!
+                One of the best ways that you can help us is to sponsor a sock and/or underwear drive.
+                We only give out new socks and underwear, so these items are always in need.  If you would like help setting this up or ideas that would work well with your group, feel free to contact us at 256-887-KIDS(5437) or <a href="mailto:info@givekidsclothes.com">info@givekidsclothes.com</a>
+            </p>
+        </div>
+        <!--/Excerpt-->
+    </div>
+    <!--/Second column-->
+    <!--Third column-->
+    <div class="col-md-6 mb-r">
+        <!--Image-->
+        <div class="view overlay hm-white-slight z-depth-2">
+            <img src="~/Content/img/TennesseeCOK/FAQ.jpg" />
+            <a>
+                <div class="mask waves-effect waves-light"></div>
+            </a>
+        </div>
+        <!--/Image-->
+        <!--Excerpt-->
+        <div class="card-block">
+            <h3 class="h3-responsive">Volunteer</h3>
+            <p>
+                We need volunteers every week. If you can
+                <ul class="list-group">
+                    <li class="list-group-item justify-content-between">sort clothes <i class="fa fa-check green-text"></i></li>
+                    <li class="list-group-item justify-content-between">pack bags <i class="fa fa-check green-text"></i></li>
+                    <li class="list-group-item justify-content-between">deliver to schools <i class="fa fa-check green-text"></i></li>
+                </ul>
+                <br />
+
+                we need your help!
+            </p>
+
+
+            <p>
+                While we are paying that God will provide us with a team of dedicated and consistent volunteers who
+                can help us give clothes to kids week after week, we always love to have those who are looking for a short term project or even a single day of ministering to us and to kids in need.
+                <br />
+                <br />
+                Just give us a call if you are looking to get involved so that we can set up time for you to help!
+            </p>
+        </div>
+        <!--/Excerpt-->
+    </div>
+    <!--/Third column-->
+    <!--Fourth column-->
+    <div class="col-md-6 mb-r">
+        <!--Image-->
+        <div class="view overlay hm-white-slight z-depth-2">
+            <img src="~/Content/img/TennesseeCOK/Donate.jpg" />
+            <a>
+                <div class="mask waves-effect waves-light"></div>
+            </a>
+        </div>
+        <!--/Image-->
+        <!--Excerpt-->
+        <div class="card-block">
+            <h3 class="h3-responsive">Donate</h3>
+            <p>
+                Just like every other ministry or non-profit, it takes money for us to operate. Because we have no paid employees and no rent, 100% of the money that is donated goes directly to ensuring kids get the clothes they need. Visit our <a href="@Url.RouteUrl("Donate")">Donations</a> page to learn more about
+                how our funds are spent and to give us your support.
+            </p>
+        </div>
+        <!--/Excerpt-->
+    </div>
+    <!--/Fourth column-->*@
 
 
 @section customScript
