--- a/ClotheOurKids.Web/Views/Donation/Give.cshtml
+++ b/ClotheOurKids.Web/Views/Donation/Give.cshtml
@@ -3,7 +3,7 @@
     <section class="section page-top-section mb-4 wow fadeIn" data-wow-delay="0.2s">
         <div class="row">
             <div class="col-12">
-                <h1 class="section-heading">Donate</h1>
+                <h1 class="section-heading">Give</h1>
             </div>
             <div class="col-12">
                 <p class="section-description"><i>give what you can: time, money, clothes</i></p>
@@ -14,17 +14,13 @@
                 <a id="FBShare" type="button" class="btn-floating btn-small btn-fb"><i class="fa fa-facebook"></i></a>
 
                 <!--Twitter-->
-                <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fgivekidsclothes.com%2FDonate&hashtags=givekidsclothes&text=Support%20Clothe%20Our%20Kids%20of%20North%20Alabama%21"
+                <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fgivekidsclothes.com%2FGive&hashtags=givekidsclothes&text=Support%20Clothe%20Our%20Kids%20of%20North%20Alabama%21"
                    type="button" class="btn-floating btn-small btn-tw">
                     <i class="fa fa-twitter"></i>
                 </a>
-
-                <!--Email-->
-                <a type="button" class="btn-floating btn-small btn-email"><i class="fa fa-envelope"></i></a>
-
             </div>
         </div>
-    </section> 
+    </section>
 
     <div class="streak bg-red white-text">
         <div class="flex-center">
@@ -34,18 +30,18 @@
             </ul>
         </div>
     </div>
-    
+
 
     <!--Section: Donate Funds-->
     <section class="section mt-4" id="funds">
-        <h1 class="section-heading wow fadeIn" data-wow-delay="0.2s">Donate Funds</h1>
+        <h1 class="section-heading wow fadeIn" data-wow-delay="0.2s">Give Funds</h1>
 
         <p class="section-description wow fadein" data-wow-delay="0.4s">
             We use all the funds that we receive to help give clothes to children.
             <br />
-            <a href="#" class="btn btn-small btn-primary btn-rounded mt-1">Donate Now</a>
+            <a href="http://www.lifewayegiving.org/dl/?uid=ClotP.O.210" class="btn btn-small btn-primary btn-rounded mt-1">Donate Now</a>
         </p>
-        
+
     </section>
     <!--/Section: Donate Funds-->
 
@@ -81,8 +77,7 @@
                 </thead>
                 <!--/Table Head-->
                 <!--Table Body-->
-                <tbody>                    
-                </tbody>
+                <tbody></tbody>
                 <!--/Table Body-->
             </table>
             <!--/Table-->
@@ -90,7 +85,7 @@
     </section>
 
 
-    
+
 
 
 </div>
@@ -112,7 +107,7 @@
                     FB.ui({
                         method: 'share',
                         mobile_iframe: true,
-                        href: 'https://localhost:44320//What-We-Give',
+                        href: 'https://www.givekidsclothes.com/Give',
                     }, function (response) { });
                 });
             });
@@ -171,5 +166,5 @@
 
             }
         }
-    </script> 
+    </script>
 }
