--- a/ClotheOurKids.Web/Views/Home/Index.cshtml
+++ b/ClotheOurKids.Web/Views/Home/Index.cshtml
@@ -288,7 +288,7 @@
             });
 
             $('#Donate').click(function () {
-                var url = '@Url.RouteUrl("Donate")';
+                var url = '@Url.RouteUrl("Give")';
                 window.location = url
             });
         });
