--- a/ClotheOurKids.Web/Views/Shared/_Layout.cshtml
+++ b/ClotheOurKids.Web/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>Clothe Our Kids of Morgan County</title>
+    <title>Clothe Our Kids of North Alabama</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="~/favicon.ico">
@@ -157,7 +157,7 @@
                     <div class="column-two d-flex justify-content-start">
                         <ul id="desktopCta" class="default header-cta-buttons hidden-lg-down">
                             <li>
-                                <a class="btn btn-rounded btn-danger" href="@Url.RouteUrl("Donate")">Give</a>
+                                <a class="btn btn-rounded btn-danger" href="@Url.RouteUrl("Give")">Give</a>
                             </li>
                             <li>
                                 <a class="btn btn-rounded btn-info" href="@Url.RouteUrl("GetInvolved")">Get Involved</a>
@@ -184,7 +184,7 @@
             </div>
             <ul id="md-cta-buttons" class="default header-cta-buttons hidden-xl-up full-width-buttons">
                 <li>
-                    <a class="btn btn-rounded btn-danger" href="@Url.RouteUrl("Donate")">Give</a>
+                    <a class="btn btn-rounded btn-danger" href="@Url.RouteUrl("Give")">Give</a>
                 </li>
                 <li>
                     <a class="btn btn-rounded btn-info" href="@Url.RouteUrl("GetInvolved")">Get Involved</a>
